# QPM

./: .gitignore  CMakeLists.txt
cmake/: build.cmake  qt.cmake
qpm-main/: CMakeLists.txt
qpm-main/res/: CMakeLists.txt  main.qrc
qpm-main/res/qml/: main.qml
qpm-main/res/qml/components/: Button.qml  InputField.qml  LoginInputForm.qml  MemberArea.qml  ProjectsPanel.qml  TicketsPanel.qml
qpm-main/res/qml/components/controls/: Button.qml  InputField.qml  RoundedImage.qml
qpm-main/res/qml/components/items/: ProjectListItem.qml  TicketListItem.qml
qpm-main/res/qml/styles/: Color.qml  Dimen.qml  qmldir
qpm-main/src/: CMakeLists.txt
qpm-main/src/cpp/: main.cpp
qpm-main/src/cpp/api/: Api.cpp  Api.hpp  ApiLink.hpp  ApiWrapper.cpp  ApiWrapper.hpp  Constants.hpp
qpm-main/src/cpp/model/: Project.cpp  Project.hpp  Ticket.cpp  Ticket.hpp
qpm-main/src/cpp/ui/: AuthController.cpp  AuthController.hpp  DataProvider.cpp  DataProvider.hpp  ProjectsListModel.cpp  ProjectsListModel.hpp  TicketsListModel.cpp  TicketsListModel.hpp
qpm-main/src/cpp/util/: Singleton.hpp
